--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test APP_ENV=test mocha -r ts-node/register -r dotenv/config --exit --timeout 20000 \"src/tests/**/*.spec.ts\"",
     "start": "ts-node -r dotenv/config src/app.ts"
   },
   "keywords": [],
@@ -19,6 +19,10 @@
     "twitter-api-v2": "^1.12.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/chai": "^4.3.3",
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0"
   }
 }
