--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
+    "morgan": "^1.10.0",
     "ts-node": "^10.9.1",
     "twitter-api-v2": "^1.12.5"
   },
@@ -22,6 +23,7 @@
     "@types/chai": "^4.3.3",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
+    "@types/morgan": "^1.9.3",
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
   }
